<resources>
    <string name="app_name" translatable="false">IMC</string>
    <string name="label_calculadora_imc">Calculadora IMC</string>
    <string name="label_calcular">Calcular</string>
    <string name="label_peso">Peso (kg)</string>
    <string name="label_altura">Altura (m)</string>
    <string name="seu_imc">Seu IMC é: %1$s.</string>

    <string name="magreza">Abaixo do peso</string>
    <string name="peso_normal">Peso normal</string>
    <string name="sobre_peso">Você está sobrepeso</string>
    <string name="obesidade_grau_i">Você está com Obesidade Grau I</string>
    <string name="obesidade_grau_ii">Você está com Obesidade Grau II</string>
    <string name="obesidade_grau_iii">Você está com Obesidade Grau III</string>
</resources>